# ChangeLog for x11-libs/qt-core
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.110 2010/10/22 15:04:55 fauli Exp $

  22 Oct 2010; Christian Faulhammer <fauli@gentoo.org> qt-core-4.6.3.ebuild:
  stable x86, bug 341703

  19 Oct 2010; Brent Baude <ranger@gentoo.org> qt-core-4.6.3.ebuild:
  Marking qt-core-4.6.3 ppc stable for bug 341703

  19 Oct 2010; Markos Chandras <hwoarang@gentoo.org> qt-core-4.6.3.ebuild:
  Stable on amd64 wrt bug #341703

  10 Oct 2010; Raúl Porcel <armin76@gentoo.org> qt-core-4.7.0.ebuild:
  Mark -sparc because it sigbuses

  24 Sep 2010; Alex Alexander <wired@gentoo.org> qt-core-4.7.0.ebuild:
  prefix fix, thanks to heiko_

  23 Sep 2010; Alex Alexander <wired@gentoo.org> qt-core-4.7.0.ebuild:
  EAPI 3, prefix, other improvements

*qt-core-4.7.0 (21 Sep 2010)

  21 Sep 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +qt-core-4.7.0.ebuild:
  Version bump

  13 Sep 2010; Tobias Klausmann <klausman@gentoo.org>
  qt-core-4.6.2-r1.ebuild:
  Stable on alpha, bug #297299

  18 Aug 2010; Jeroen Roovers <jer@gentoo.org> qt-core-4.6.2-r1.ebuild:
  Stable for HPPA (bug #297299).

  04 Aug 2010; Markus Meier <maekke@gentoo.org> qt-core-4.6.2-r1.ebuild:
  arm stable, bug #297299

  11 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.3-r2.ebuild, qt-core-4.6.2-r1.ebuild, qt-core-4.6.3.ebuild:
  Remove .la files from qt-core module

  05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  qt-core-4.6.2-r1.ebuild:
  ppc64 stable wrt #297299

  24 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  -qt-core-4.6.1-r1.ebuild:
  Drop Qt-4.6.1

*qt-core-4.6.3 (08 Jun 2010)

  08 Jun 2010; Markos Chandras <hwoarang@gentoo.org> +qt-core-4.6.3.ebuild:
  Version bump

  22 May 2010; Raúl Porcel <armin76@gentoo.org> qt-core-4.6.2-r1.ebuild,
  +files/qt-4.6.2-alpha.patch:
  Add a patch to compile on alpha wrt #318975
