@@ -1,13 +1,13 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/Attic/qt-core-4.6.3.ebuild,v 1.6 2010/10/22 15:04:55 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/Attic/qt-core-4.6.3.ebuild,v 1.7 2010/10/23 15:24:32 armin76 Exp $
 
 EAPI="2"
 inherit qt4-build
 
 DESCRIPTION="The Qt toolkit is a comprehensive C++ application development framework"
 SLOT="4"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ppc ~ppc64 ~sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
+KEYWORDS="alpha amd64 arm ~hppa ia64 ~mips ppc ~ppc64 sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
 IUSE="doc +glib iconv optimized-qmake qt3support ssl"
 
 RDEPEND="sys-libs/zlib
