@@ -1,13 +1,13 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-dbus/Attic/qt-dbus-4.6.3.ebuild,v 1.4 2010/10/22 15:07:20 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-dbus/Attic/qt-dbus-4.6.3.ebuild,v 1.5 2010/10/23 15:26:16 armin76 Exp $
 
 EAPI="2"
 inherit qt4-build
 
 DESCRIPTION="The DBus module for the Qt toolkit"
 SLOT="4"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ppc ~ppc64 ~sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
+KEYWORDS="alpha amd64 arm ~hppa ia64 ~mips ppc ~ppc64 sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
 IUSE=""
 
 DEPEND="~x11-libs/qt-core-${PV}[aqua=,debug=]
