@@ -1,13 +1,13 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-gui/Attic/qt-gui-4.6.3.ebuild,v 1.6 2010/10/22 15:37:36 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-gui/Attic/qt-gui-4.6.3.ebuild,v 1.7 2010/10/23 15:29:59 armin76 Exp $
 
 EAPI="2"
 inherit confutils eutils qt4-build
 
 DESCRIPTION="The GUI module for the Qt toolkit"
 SLOT="4"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ppc ~ppc64 ~sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
+KEYWORDS="alpha amd64 arm ~hppa ia64 ~mips ppc ~ppc64 sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
 IUSE="+accessibility cups dbus +glib gtk mng nas nis raster tiff trace qt3support xinerama"
 
 RDEPEND="media-libs/fontconfig
