@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt-dbus
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-dbus/ChangeLog,v 1.76 2010/10/22 15:07:20 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-dbus/ChangeLog,v 1.77 2010/10/23 15:26:16 armin76 Exp $
+
+  23 Oct 2010; Raúl Porcel <armin76@gentoo.org> qt-dbus-4.6.3.ebuild:
+  alpha/arm/ia64/sparc stable wrt #341703
 
   22 Oct 2010; Christian Faulhammer <fauli@gentoo.org> qt-dbus-4.6.3.ebuild:
   stable x86, bug 341703
