@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt-core
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.110 2010/10/22 15:04:55 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.111 2010/10/23 15:24:32 armin76 Exp $
+
+  23 Oct 2010; Raúl Porcel <armin76@gentoo.org> qt-core-4.6.3.ebuild:
+  alpha/arm/ia64/sparc stable wrt #341703
 
   22 Oct 2010; Christian Faulhammer <fauli@gentoo.org> qt-core-4.6.3.ebuild:
   stable x86, bug 341703
